# UdemyCmake_Template

./: .gitmodules
2_CMake/1_HelloWorld/: CMakeLists.txt
2_CMake/2_BasicProject/: CMakeLists.txt
2_CMake/3_IntermediateProject/: CMakeLists.txt
2_CMake/4_VariableOptions/: CMakeLists.txt
2_CMake/5_ConfigureFile/src/my_lib/: my_lib.cc
2_CMake/6_SourcesAndHeaders/: CMakeLists.txt
2_CMake/6_SourcesAndHeaders/app/: CMakeLists.txt  main.cc
